--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.3",
-    "@walletconnect/react-native-dapp": "^1.7.8",
+    "@react-native-async-storage/async-storage": "1.16.1",
+    "@walletconnect/react-native-dapp": "1.7.1",
+    "@walletconnect/web3-provider": "^1.7.8",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
