--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChaiSwap",
+  "name": "ReactNativeDapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.16.1",
-    "@walletconnect/react-native-dapp": "1.7.1",
+    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@walletconnect/react-native-dapp": "^1.7.7",
     "@walletconnect/web3-provider": "^1.7.8",
     "react": "17.0.2",
     "react-native": "0.68.1",
