--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@walletconnect/react-native-dapp": "^1.7.7",
     "@walletconnect/web3-provider": "^1.7.8",
+    "crypto": "^1.0.1",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-fs": "^2.20.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-svg": "^12.3.0",
+    "react-native-tcp": "^4.0.0",
+    "readable-stream": "^3.6.0",
+    "stream-http": "^3.2.0",
+    "vm-browserify": "^1.1.2",
     "web3": "^1.7.3"
   },
   "devDependencies": {
